<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="3dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">


            <TextView
                style="@style/TextBackgroundStyle"
                android:text="@string/tag_data_type" />

            <RadioGroup
                android:id="@+id/rg_readDataType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <RadioButton
                    android:id="@+id/rb_hex"
                    style="@style/RadioButtonStyle"
                    android:layout_marginStart="10dp"
                    android:text="@string/data_type_sixteen" />

                <RadioButton
                    android:id="@+id/rb_ascii"
                    style="@style/RadioButtonStyle"
                    android:text="@string/data_type_ascii" />

                <RadioButton
                    android:id="@+id/rb_gbk"
                    style="@style/RadioButtonStyle"
                    android:text="@string/data_type_gbk" />

                <RadioButton
                    android:id="@+id/rb_utf"
                    style="@style/RadioButtonStyle"
                    android:text="@string/data_type_utf" />
            </RadioGroup>


            <TextView
                style="@style/TextBackgroundStyle"
                android:text="@string/tag_blocks" />

            <RadioGroup
                android:id="@+id/rg_readOperateBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <RadioButton
                    android:id="@+id/rb_reserve"
                    style="@style/RadioButtonStyle"
                    android:layout_marginStart="10dp"
                    android:text="@string/tag_reserve" />

                <RadioButton
                    android:id="@+id/rb_epc"
                    style="@style/RadioButtonStyle"
                    android:text="@string/tag_epc" />

                <RadioButton
                    android:id="@+id/rb_tid"
                    style="@style/RadioButtonStyle"
                    android:text="@string/tag_tid" />

                <RadioButton
                    android:id="@+id/rb_user"
                    style="@style/RadioButtonStyle"
                    android:text="@string/tag_user" />

            </RadioGroup>

            <TextView
                style="@style/TextBackgroundStyle"
                android:text="@string/tags_read" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyle"
                    android:text="@string/tag_operate_start_address" />

                <EditText
                    android:id="@+id/et_readStartAddress"
                    style="@style/EditTextStyle"
                    android:inputType="number"
                    android:text="2"
                    tools:ignore="LabelFor" />

                <TextView
                    style="@style/TextViewStyle"
                    android:text="@string/tag_operate_block" />

                <EditText
                    android:id="@+id/et_readBlock"
                    style="@style/EditTextStyle"
                    android:inputType="number"
                    android:text="2"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_readData"
                style="@style/EditTextStyle"
                tools:ignore="LabelFor,TextFields" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="100dp">

                <Button
                    android:id="@+id/btn_readTag"
                    style="@style/common_button_style"
                    android:text="@string/tags_read_button" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</ScrollView>


