<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="3dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            style="@style/TextBackgroundStyle"
            android:text="@string/tag_data_type" />

        <RadioGroup
            android:id="@+id/rg_writeDataType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <RadioButton
                android:id="@+id/rb_writeHex"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="10dp"
                android:text="@string/data_type_sixteen" />

            <RadioButton
                android:id="@+id/rb_writeAscii"
                style="@style/RadioButtonStyle"
                android:text="@string/data_type_ascii" />

            <RadioButton
                android:id="@+id/rb_writeGbk"
                style="@style/RadioButtonStyle"
                android:text="@string/data_type_gbk" />

            <RadioButton
                android:id="@+id/rb_writeUtf"
                style="@style/RadioButtonStyle"
                android:text="@string/data_type_utf"/>
        </RadioGroup>


        <TextView
            style="@style/TextBackgroundStyle"
            android:text="@string/tag_blocks" />

        <RadioGroup
            android:id="@+id/rg_writeBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <RadioButton
                android:id="@+id/rb_writeReserve"
                style="@style/RadioButtonStyle"
                android:layout_marginStart="10dp"
                android:text="@string/tag_reserve" />

            <RadioButton
                android:id="@+id/rb_writeEpc"
                style="@style/RadioButtonStyle"
                android:text="@string/tag_epc"/>

            <RadioButton
                android:id="@+id/rb_writeTid"
                style="@style/RadioButtonStyle"
                android:text="@string/tag_tid" />

            <RadioButton
                android:id="@+id/rb_writeUser"
                style="@style/RadioButtonStyle"
                android:text="@string/tag_user" />

        </RadioGroup>
        <TextView
            style="@style/TextBackgroundStyle"
            android:text="@string/tags_write" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/tag_operate_start_address" />

            <EditText
                android:id="@+id/et_writeStartAddress"
                style="@style/EditTextStyle"
                android:inputType="number"
                tools:ignore="LabelFor"
                android:text="2"/>

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/tag_operate_block" />

            <EditText
                android:id="@+id/et_writeBlock"
                style="@style/EditTextStyle"
                android:inputType="number"
                tools:ignore="LabelFor"
                android:text="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_writeData"
                style="@style/EditTextStyle"
                android:textColor="@color/colorPrimary"
                tools:ignore="LabelFor,TextFields"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="password:"/>
                <CheckBox
                    android:id="@+id/cb_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_writeTag"
                    style="@style/common_button_style"
                    android:text="@string/tags_write_button" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</ScrollView>


