<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/top_Bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:background="@drawable/shadow_bottom"
        android:layout_alignParentTop="true"

        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_startInventory"
            android:focusableInTouchMode="false"
            style="@style/TopButtonStyle"
            android:text="@string/inventory_button_start"/>
        <Button
            android:id="@+id/btn_stopInventory"
            style="@style/TopButtonStyle"
            android:text="@string/inventory_button_stop"/>
        <Button
            android:id="@+id/btn_Clear"
            style="@style/TopButtonStyle"
            android:text="@string/inventory_button_clean"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d9d8d8"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/inventory_devices"/>
        <TextView
            android:id="@+id/tv_module_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
           />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/inventory_times"/>
        <TextView
            android:id="@+id/tv_systemTimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:format="00:00:00"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/sr_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_weight="1">


            <!--overScrollMode:listview 到顶部或底部拉出空白回弹的效果-->
            <ListView
                android:id="@+id/listView"
                android:scrollbars="vertical"
                android:fadingEdge="vertical"
                android:overScrollMode="never"
                android:dividerHeight="0.5dp"
                android:divider="@color/divider_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="51dp"
                android:background="@color/listview_background"
                android:layout_marginBottom="51dp"
                android:layout_alignParentTop="true" />


            <Button
                android:clickable="true"
                android:visibility="gone"
                android:id="@+id/empty_fresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inventory_refersh"
                android:textSize="40sp" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        <TextView
            android:id="@+id/tv_lucencyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lucency">
        </TextView>


    </RelativeLayout>


</LinearLayout>
